--- a/web_server/Makefile
+++ b/web_server/Makefile
@@ -1,2 +1,2 @@
 start:
-	docker run --rm -p 3000:3000 -v ${PWD}/web:/usr/share/nginx/html -v ${PWD}/default.conf:/etc/nginx/conf.d/default.conf nginx
+	docker run --rm -p 3000:3000 -v ${PWD}/web1:/usr/share/nginx/html -v ${PWD}/default.conf:/etc/nginx/conf.d/basic.conf nginx
