--- a/proxy/conf.d/react.conf
+++ b/proxy/conf.d/react.conf
@@ -1,17 +1,14 @@
 server {
-    listen          3000;
-    listen          [::]:3000 default_server;
+    listen          80;
+    listen          [::]:80;
     
-    server_name  localhost;
+    server_name     react.example.com;
 
-    root   /usr/share/nginx/html/react/build;
+    root   /usr/share/nginx/html/build;
     index  index.html;
 
-    location / {}
-
-    gzip            on;
-    gzip_comp_level  3;
-
-    gzip_types      text/plain text/css image/*;
+    location / {
+        proxy_pass http://react.example.com;
+    }
 }
 
