--- a/proxy/conf.d/vue.conf
+++ b/proxy/conf.d/vue.conf
@@ -1,17 +1,14 @@
 server {
-    listen          8080;
-    listen          [::]:8080 default_server;
+    listen          80;
+    listen          [::]:80;
     
-    server_name  localhost;
+    server_name     vue.example.com;
 
-    root   /usr/share/nginx/html/vue/dist;
+    root   /usr/share/nginx/html/dist;
     index  index.html;
 
-    location / {}
-
-    gzip            on;
-    gzip_comp_level  3;
-
-    gzip_types      text/plain text/css image/*;
+    location / {
+        proxy_pass http://vue.example.com;
+    }
 }
 
