Add upstream server lists.

--- a/load-balance/nginx.conf
+++ b/load-balance/nginx.conf
@@ -28,5 +28,11 @@ http {
 
     #gzip  on;
 
+    upstream load_balance {
+        server server_1:8080;
+        server server_2:8080;
+        server server_3:8080;
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
